--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,20 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: rgba(255, 255, 255, 0.6);
   background: #13131f;
+  padding-bottom: 60px;
 }
 
 a {
-  color: #8257e6;
+  color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
 }
 
 a:hover {
-  color: #067ded;
+  color: #8257e6;
   text-decoration: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Raleway", sans-serif;
-}
 .space-custom {
   margin-top: 8px;
 }
@@ -50,7 +43,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #0678e3;
+  background: #8257e6;
   color: #f9f9f9;
 }
 
@@ -261,6 +254,8 @@ h6 {
   width: 100%;
   height: 100vh;
   position: relative;
+  background-size: cover;
+  background-image: url("../img/Microsoft-windows-11-digital-art-waveforms-colorful-2248606-wallhere.com.jpg");
 }
 
 @media (min-width: 992px) {
@@ -269,14 +264,30 @@ h6 {
   }
 }
 
-#hero:before {
+#hero::before,
+#hero::after {
   content: "";
-  background: rgba(19, 19, 31, 0.8);
   position: absolute;
-  bottom: 0;
   top: 0;
   left: 0;
-  right: 0;
+  width: 50%;
+  height: 50%;
+  z-index: 2;
+}
+#hero::before {
+  background: linear-gradient(to right, rgb(19 19 31 / 100%), #00000000);
+  height: 100%;
+  width: 150%;
+}
+
+#hero::after {
+  bottom: 0;
+  background: linear-gradient(to top, rgb(19 19 31 / 97%), transparent);
+  width: 100%;
+  top: inherit;
+}
+#hero .container {
+  z-index: 3;
 }
 
 #hero h1 {
@@ -291,7 +302,6 @@ h6 {
   color: #8e8e8e;
   margin: 15px 0 0 0;
   font-size: 26px;
-  font-family: "Poppins", sans-serif;
 }
 
 #hero p span {
@@ -303,6 +313,7 @@ h6 {
   position: absolute;
   bottom: 60px;
   right: 60px;
+  z-index: 5;
 }
 
 #hero .social-links a {
@@ -466,7 +477,6 @@ section {
 .facts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
   font-size: 14px;
 }
 
@@ -490,7 +500,6 @@ section#skills {
   text-transform: uppercase;
   display: block;
   font-weight: 600;
-  font-family: "Poppins", sans-serif;
   color: #f9f9f9;
 }
 
@@ -533,14 +542,12 @@ section#skills {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
   color: #8257e6;
   margin-bottom: 10px;
 }
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #f7f8f9;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -574,8 +581,23 @@ section#skills {
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
+.modal-dialog {
+  min-width: 1000px;
+  height: auto;
+}
+.modal-body {
+  padding: 0;
+}
+.modal-content {
+  background: none;
+  border: none;
+}
+
 .portfolio .portfolio-item {
   margin-bottom: 30px;
+}
+#videoPlayer {
+  padding: 3px;
 }
 
 .portfolio #portfolio-flters {
@@ -615,20 +637,14 @@ section#skills {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  background: rgba(69, 80, 91, 0.8);
+  cursor: pointer;
+  border-radius: 6px;
+  box-shadow: 0px 0 6px rgb(8 8 8 / 44%);
 }
 
-.portfolio .portfolio-wrap::before {
-  content: "";
-  background: rgba(255, 255, 255, 0.7);
-  position: absolute;
-  left: 30px;
-  right: 30px;
-  top: 30px;
-  bottom: 30px;
-  transition: all ease-in-out 0.3s;
-  z-index: 2;
-  opacity: 0;
+.thumbnail-img {
+  width: 450px;
+  height: 280px;
 }
 
 .portfolio .portfolio-wrap .portfolio-info {
@@ -645,6 +661,8 @@ section#skills {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #ffffff;
+  font-weight: bold;
 }
 
 .portfolio .portfolio-wrap .portfolio-info::before {
@@ -675,47 +693,9 @@ section#skills {
   z-index: 9994;
 }
 
-.portfolio .portfolio-wrap .portfolio-info h4 {
-  font-size: 20px;
-  color: #f9f9f9;
-  font-weight: 600;
-}
-
-.portfolio .portfolio-wrap .portfolio-info p {
-  color: #f9f9f9;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 0;
-  margin: 0;
-}
-
-.portfolio .portfolio-wrap .portfolio-links {
-  text-align: center;
-  z-index: 4;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a {
-  color: #f9f9f9;
-  margin: 0 2px;
-  font-size: 28px;
-  display: inline-block;
-  transition: 0.3s;
-}
-
-.portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #148af9;
-}
-
-.portfolio .portfolio-wrap:hover::before {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 1;
-}
-
 .portfolio .portfolio-wrap:hover .portfolio-info {
   opacity: 1;
+  background-color: #353435ce;
 }
 
 .portfolio .portfolio-wrap:hover .portfolio-info::before {
@@ -1167,7 +1147,6 @@ section#skills {
   font-size: 36px;
   font-weight: 700;
   position: relative;
-  font-family: "Poppins", sans-serif;
   padding: 0;
   margin: 0 0 15px 0;
 }
@@ -1212,25 +1191,61 @@ section#skills {
   font-size: 13px;
 }
 
-.skil-group ul {
+/* skill destaque - hero */
+.wrapper {
   display: flex;
   align-items: center;
-  gap: 22px;
-}
-.skil-group ul li {
-  text-decoration: none;
   list-style: none;
+  gap: 30px;
 }
-.skil-group ul li img {
+.wrapper img {
   width: 30px;
   height: 30px;
   object-fit: cover;
-  transition: transform 0.3s ease;
 }
-.skil-group ul li img:hover {
-  transform: scale(1.5);
+.wrapper img:hover {
+  transform: scale(1.4);
+}
+.wrapper .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  cursor: pointer;
 }
 
+.wrapper .tooltip {
+  position: absolute;
+  top: 0;
+  font-size: 14px;
+  background: #8257e6;
+  color: #f9f9f9;
+  padding: 5px 8px;
+  border-radius: 5px;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.wrapper .tooltip::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon:hover .tooltip {
+  top: 45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+/* Skills resumo - Competencias */
 section#skills .container .skills-content .cards {
   display: flex;
   flex-wrap: wrap;
@@ -1241,5 +1256,22 @@ section#skills .container .skills-content .cards .box {
   position: relative;
   text-align: center;
   cursor: pointer;
-  transition: 0.2s;
+  transition: transform 0.3s ease;
+}
+section#skills .container .skills-content .cards .box:hover {
+  transform: scale(1.5);
+}
+
+.angular-svg {
+  fill: rgb(124 97 174);
+  color: rgb(124 97 174);
+}
+
+#verMaisBtn {
+  font-size: 14px;
+  background: #33147b;
+  color: #ccc;
+  font-weight: bold;
+  border: none;
+  padding: 8px;
 }
