--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
   color: rgba(255, 255, 255, 0.6);
-  background: #13131f;
+  background: #181818;
   padding-bottom: 60px;
 }
 
@@ -254,8 +254,7 @@ a:hover {
   width: 100%;
   height: 100vh;
   position: relative;
-  background-size: cover;
-  background-image: url("../img/Microsoft-windows-11-digital-art-waveforms-colorful-2248606-wallhere.com.jpg");
+  background: #181818;
 }
 
 @media (min-width: 992px) {
